--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.992.0",
-    "uuid": "~8.3.2",
+    "gm": "~1.23.1",
     "mime": "~2.5.2",
+    "minio": "^7.0.32",
     "request": "~2.69.0",
-    "gm": "~1.23.1"
+    "uuid": "~8.3.2"
   }
 }
